added Controller and ViewController, added tests